fix(styles/component): add z-index for footer

--- a/src/styles/components/footer.less
+++ b/src/styles/components/footer.less
@@ -5,6 +5,7 @@
   height: 50px;
   background: white;
   box-shadow: 0 0 4px 0 rgba(0,0,0,0.20);
+  z-index: 1;
 
   display: flex;
   justify-content: space-between;
